--- a/CS338/HW2/CS338HW2.tex
+++ b/CS338/HW2/CS338HW2.tex
@@ -64,36 +64,53 @@
 %(1.1) Problem 1.6.c, 1.6.f (page 84— all the questions with only numbers given are
 %referred to the 3rd edition of the textbook).
 
-\begin{figure}[h]
-  \includegraphics[width=\linewidth]{dfa1.png}
-  \caption{ $\lbrace$w$\mid$w contains the substring 0101 $($i.e., w = x0101y for some x and y$)$$\rbrace$}
-  \label{fig:dfa1}
-\end{figure}
 
-\begin{figure}[h]
-  \includegraphics[width=\linewidth]{dfa2.png}
-  \caption{ $\lbrace$w$\mid$w doesn't contain the substring 110$\rbrace$}
-  \label{fig:dfa2}
-\end{figure}
+	\begin{figure}[h]
+		\includegraphics[scale = 1]{dfa1.png}
+  		\caption{ $\lbrace$w$\mid$w contains the substring 0101 $($i.e., w = x0101y for some x and y$)$$\rbrace$}
+  		\label{fig:dfa1}
+	\end{figure}
 
 
-%(1.2) Problem 1.7.b, 1.7.c (page 84)
+	\begin{figure}[h]
+  		\includegraphics[scale = 1]{dfa2.png}
+  		\caption{ $\lbrace$w$\mid$w doesn't contain the substring 110$\rbrace$}
+  		\label{fig:dfa2}
+	\end{figure}
+
+
+
 \section{State Diagrams of NFA}
+%(1.2) Problem 1.7.b, 1.7.c (page 84)
 
-\begin{figure}[h]
-  \includegraphics[width=\linewidth]{dfa3.png}
-  \caption{ $\{$w$\mid$w contains the substring 0101 $($i.e., w = x0101y for some x and y$)$$\}$}
-  \label{fig:dfa3}
-\end{figure}
+	\begin{figure}[h]
+		\includegraphics[scale = 1]{dfa3.png}
+ 		\caption{ $\{$w$\mid$w contains the substring 0101 $($i.e., w = x0101y for some x and y$)$$\}$}
+  		\label{fig:dfa3}
+	\end{figure}
 
-\begin{figure}[h]
-  \includegraphics[width=\linewidth]{dfa42.png}
-  \caption{ $\{$w$\mid$w has either an even amount of 0's or exactly 2 1's$\}$}
-  \label{fig:dfa4}  
-\end{figure} 
 
-\section{NFA to EDFA}
+	\begin{figure}[h]
+  		\includegraphics[scale = 1]{dfa42.png}
+  		\caption{ $\{$w$\mid$w has either an even amount of 0's or exactly 2 1's$\}$}
+  		\label{fig:dfa4}  
+	\end{figure} 
+
+
+
+\section{NFA to DFA}
 %Problem 1.19.a, 1.19.b (page 86).
 
+	\begin{figure}[h]
+  		\includegraphics[scale = 1]{dfa5.png}
+  		\caption{ 1.16 part a}
+  		\label{fig:dfa5}  
+	\end{figure} 
+	
+	\begin{figure}[h]
+  		\includegraphics[scale = 1]{dfa6.png}
+  		\caption{ 1.16 part b}
+  		\label{fig:dfa6}  
+	\end{figure} 	
 
 \end{document}
