--- a/CS338/HW2/CS338HW2.tex
+++ b/CS338/HW2/CS338HW2.tex
@@ -60,38 +60,39 @@
 
 \begin{document}
 \maketitle
-\section{State Diagrams of DFA}
+\section{}
+\subsection{State Diagrams of DFA}
 %(1.1) Problem 1.6.c, 1.6.f (page 84— all the questions with only numbers given are
 %referred to the 3rd edition of the textbook).
 
 
 	\begin{figure}[h]
-		\includegraphics[scale = 1]{dfa1.png}
+		\includegraphics[scale = .75]{dfa1.png}
   		\caption{ $\lbrace$w$\mid$w contains the substring 0101 $($i.e., w = x0101y for some x and y$)$$\rbrace$}
   		\label{fig:dfa1}
 	\end{figure}
 
 
 	\begin{figure}[h]
-  		\includegraphics[scale = 1]{dfa2.png}
+  		\includegraphics[scale = .75]{dfa2.png}
   		\caption{ $\lbrace$w$\mid$w doesn't contain the substring 110$\rbrace$}
   		\label{fig:dfa2}
 	\end{figure}
 
 
 
-\section{State Diagrams of NFA}
+\subsection{State Diagrams of NFA}
 %(1.2) Problem 1.7.b, 1.7.c (page 84)
 
 	\begin{figure}[h]
-		\includegraphics[scale = 1]{dfa3.png}
+		\includegraphics[scale = .75]{dfa3.png}
  		\caption{ $\{$w$\mid$w contains the substring 0101 $($i.e., w = x0101y for some x and y$)$$\}$}
   		\label{fig:dfa3}
 	\end{figure}
 
 
 	\begin{figure}[h]
-  		\includegraphics[scale = 1]{dfa42.png}
+  		\includegraphics[scale = .75]{dfa42.png}
   		\caption{ $\{$w$\mid$w has either an even amount of 0's or exactly 2 1's$\}$}
   		\label{fig:dfa4}  
 	\end{figure} 
@@ -99,18 +100,29 @@
 
 
 \section{NFA to DFA}
-%Problem 1.19.a, 1.19.b (page 86).
+%Problem 1.16.a, 1.16.b (page 86).
 
 	\begin{figure}[h]
-  		\includegraphics[scale = 1]{dfa5.png}
+  		\includegraphics[scale = .75]{dfa5.png}
   		\caption{ 1.16 part a}
   		\label{fig:dfa5}  
 	\end{figure} 
 	
-	\begin{figure}[h]
-  		\includegraphics[scale = 1]{dfa6.png}
+	\begin{figure}[h!]
+  		\includegraphics[scale = .7]{dfa6.png}
   		\caption{ 1.16 part b}
   		\label{fig:dfa6}  
 	\end{figure} 	
+
+
+\section{Regular Expression to NFA}
+%Problem 1.19.a, 1.19.b (page 86).
+
+	\begin{figure}[h!]
+  		\includegraphics[scale = .75]{dfa7.png}
+  		\caption{ $($0 U 1$)$$\ast$ 000 $($0 U 1$)$$\ast$}
+  		\label{fig:dfa7}  
+	\end{figure} 
+
 
 \end{document}
