--- a/CS338/HW2/CS338HW2.tex
+++ b/CS338/HW2/CS338HW2.tex
@@ -124,5 +124,15 @@
   		\label{fig:dfa7}  
 	\end{figure} 
 
+	\begin{figure}[h!]
+  		\includegraphics[scale = .75]{dfa8.png}
+  		\caption{$($$($$($00$)$$\ast$$($11$)$$)$ U 01$)$$\ast$}
+  		\label{fig:dfa8}  
+	\end{figure} 
+\newpage
+\section{Finite Automata to Regular Expression}
+%Problem 1.21a 
+
+
 
 \end{document}
