--- a/ANTY101/Lab1/Bones.tex
+++ b/ANTY101/Lab1/Bones.tex
@@ -61,5 +61,21 @@
          % otherwise the current date is printed 
 \doublespacing
 \begin{document}
+\maketitle
+\section{Homo Floresiensis}
+I believe that the first skull in the lab is none other than Homo Floresiensis. It has an extremely small brain size as well as the absence of the chin. It also has formed teeth and a very flat temple. All of these evidence leds me to believe that this is the Homo Floresiensis. Homo Floresiensis got its name from its island home. It has been theorized that these creatures migrated out of Africa long before the rule of Homo Erectus, its presumed ancestor. It is speculated that they arrived to Flores on boats anywhere between 100,000 to 60,000 years ago. (Stringer and Andrews: 174)
+
+\section{Homo Neanderthalensis}
+Large brain size. Long, broad and low braincases with long faces containing large noses. Cheekbones swept back and face seemingly pulled forward. All signs point to this being Homo Neanderthalensis, widly considered the first ancient humans from 70,000 to 30,000 years ago. Believed to originate from Europe (Stringer and Andrews: 155). Theses ancient human had advanced tools and seemed to have an advanced social system as well. 
+
+\section{Australopithecus Africanus}
+A combination of ape-like and human-like characteristics. Contains Canine teeth, however, has a ever forward jaw. Large brain size, but a very flat face and nose. The jaw gives it away however, this is clearly Australopithecus Africanus. Believed to roam the Earth over two million years ago (Pliocene and early Pleistocene times) in Africa. (Stringer and Andrews: 124)
+
+
+
+\section{Sahelanthropus Tchadensis}
+Very small head with distinct brows. Elongated skull and small teeth. This evidence led me to believe that this is the Sahelanthropus Tchadensis from about 6 million years ago. Believed to have lived in west-central Africa.
+
+
 
 \end{document}
