--- a/CS338/HW2/CS338HW2.tex
+++ b/CS338/HW2/CS338HW2.tex
@@ -134,5 +134,7 @@
 %Problem 1.21a 
 
 
-
+\section{Pumping Lemma}
+\subsection{A = $\{$a$^{n}$$^{3}$$\mid$n$\geq$0$\}$}
+\subsection{B = $\{$0$^{n}$1$^{m}$0$^{n}$$\mid$m,n$\geq$0$\}$}
 \end{document}
