--- a/ANTY101/Almost Human Speech/AlmostHuman.tex
+++ b/ANTY101/Almost Human Speech/AlmostHuman.tex
@@ -3,10 +3,23 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage{setspace}
 \author{Brock Ellefson}
 \title{ANTY101 - Almost Human}
 \begin{document}
 \maketitle
+\doublespacing
 
 
+
+This was a very exciting and controversial discovery for the anthropology community. In 2013, two cavers decided to go caving in a cave called Rising Star. Little did they know, they were about to make history. They decided to venture into a part of the cave that no one else has gone into before. Its in that section where they encountered the bones of what we now call Homo Neledi. The name is a reference to the cave it was discovered in, Neledi, meaning star. This discovery was so astonishing to South Africa that the vice president held a press conference about it. 
+
+
+Only ten or so caves in the region had hominids in them before this discovery. They are really only found in flowstones, a deposit of calcite or other carbon based materials. These bones in particular were 240 meters deep from the entrance of Rising Star. Originally, the only way in and out was through a superman hole. But carefully placed charges, a larger entryway to advance to excavation. 
+
+
+The site contained 1550 species, 1413 bones, 137 isolated teeth, 1250 specimens, and 15 people. This was a record setting site of all time. The individuals had modern looking hands with curved fingers, had a small cranium (450-500cc).
+
+
+How did these fossils get here? A few theories have accumulated. The old theory was that it was a predator trap. Having a hole in the ground as a trap set for animals to fall into. How ever there are a lot of bones of complete individuals down there so the new theory is that the deposit is one of deliberate disposal. In other words, they were buried there.
 \end{document}
