--- a/CS305/HW2/CS305HW2.tex
+++ b/CS305/HW2/CS305HW2.tex
@@ -10,7 +10,11 @@
 \maketitle
 $\ast$ Discussed ideas with Trent Baker $\ast$
 \section{Operational Semantics}
-
+loop:\\
+	list of looped statements\\
+	if(condition) goto exit loop\\
+	goto loop\\
+.\\.\\.\\.
 
 \section{Scoping}
 Mark 1:\\
