--- a/CS338/HW3/CS338HW3.tex
+++ b/CS338/HW3/CS338HW3.tex
@@ -46,4 +46,13 @@
 	
 \section{CFG to PDA}
 
+
+\section{Pumping Lemma}
+\subsection{}
+	This langauge accepts some amount($\geq$ 0) of 0's followed by atleast 1, but no more than 2 \#, following by some amount ($\geq$ 0) of 0's
+\subsection{}
+If G is a context free then there is a number P (Pumping length) such that S $\in$ and $\mid$S$\mid$ $\geq$ P then S can be decomposed into S = UVXYZ S.T.: \\
+1. uv$^{i}$xy$^{i}$z\\
+2. $\mid$vy$\mid$ $>$ 0 \\ 
+3. $\mid$vxy$\mid$ $\leq$ P
 \end{document}
