--- a/CS338/HW3/CS338HW3.tex
+++ b/CS338/HW3/CS338HW3.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage{graphicx}
 \author{Brock Ellefson}
 \title{CSCI338 HW3}
 \begin{document}
@@ -41,7 +42,10 @@
 	This language is ambiguous
 	
 \section{CFG to PDA}
-
+	\begin{figure}[h]
+		\includegraphics[scale = .75]{CFGtoPDA.png}
+  		\label{fig:cfgtopda}
+	\end{figure}
 
 \section{Pumping Lemma with Regular Languages}
 \subsection{}
@@ -88,9 +92,29 @@
 		
 \section{Pumping Lemma with Context-Free Languages}
 \subsection{L = $\lbrace$ a$^{n}$ b$^{j}$ c$^{k}$ $\mid$ k = nj $\rbrace$}
-
-
+	Assume L is a context free language. S = a$^{p}$ b$^{p}$ c$^{p^{2}}$\\
+	S can be decomposed into S = uv$^{i}$xy$^{i}$z such that:\\
+	1. uv$^{i}$xy$^{i}$z $\in$ L\\
+	2. $\mid$ uy $\mid$ $\>$ 0 \\
+	3. $\mid$ uxy $\mid$ $\leq$ P\\
+	\\
+	Cases:\\
+	i. v contains b's or a's and y contains only c's. i = 0 so uv$^{0}$xy$^{0}$z 	thus making the string a$^{p}$ b$^{p}$ c$^{p^{2}-1}$ which is not in the language\\
+	ii. v and y both contain a's and b's. i = 0 so uv$^{0}$xy$^{0}$z thus making the string a$^{p}$ b$^{p-k}$ c$^{p^{2}}$ or  a$^{p-k}$ b$^{p}$ c$^{p^{2}}$ which is not in the 		language\\ 
+	iii. v and y both contain c's i = 0 making a$^{p}$ b$^{p}$ c$^{p^{2}-k}$ which is not in the language.\\
+	iv. v and y contain 2 symbols. i = 2 uv$^{2}$xy$^{2}$z however the characters will be out of order and not in the language\\
+	Thus L is not a CFG
 
 \subsection{L = $\lbrace$ a$^{n}$ b$^{j}$ $\mid$ n $\geq$ (j - 1)$^{3}$ $\rbrace$}
 
+
+	Assume L is a context free language. S = a$^{p}$ b$^{p}$\\
+	S can be decomposed into S = uv$^{i}$xy$^{i}$z such that:\\
+	1. uv$^{i}$xy$^{i}$z $\in$ L\\
+	2. $\mid$ uy $\mid$ $\>$ 0 \\
+	3. $\mid$ uxy $\mid$ $\leq$ P\\
+	\\
+	Cases:\\
+	i. either v or y has more than one symbol. Thus when it is pumped up the characters are out of order and not in the language.\\
+	ii. v contains only a's and y contains only b's. i = 2 thus making uv$^{2}$xy$^{2}$z which is not in the language, there are not enough a's
 \end{document}
