--- a/WRIT221/Abstract Translation/Abstract Translation.tex
+++ b/WRIT221/Abstract Translation/Abstract Translation.tex
@@ -39,7 +39,7 @@ Yo I got the CS101 textbook for sale on studentsales.com for \$40 bucks.\$\$\$ \
 Textbook prices are beginning to get out of hand. Many college students can't even afford some or all of their textbooks. Obviously, students who have their textbooks are going to have a better knowledge of the material and a better grade than the average student without a textbook. Clearly, this is a problem that needs to be addressed. Right now, the current strategy is to actually go around the college bookstore and either order textbooks online or from another student at a highly discounted price. Towards the end of the semester, professors should should notify students who plan to take the course the following semester of all the materials needed. This advance will give students who already took the class time to sell their textbooks to upcoming students taking the class at an affordable price. Overall this should create not only a better economy to purchase books and generate a whole new batch of students that will better understand the material, leading to better grades. 
 
 \section*{Analysis}
-
-I tried my best to 
+%Analyize the process of making this posts 
+I tried my best to really format the information into a post I would expect to see on sites like Facebook and Twitter. The block of text that was presented for the edit was a fairly simple piece. Pretty easy to understand the material presented, however I found the transition to a Facebook post and Tweet rather awkward. I guess since I don't have a Facebook or a Twitter account anymore I'm not really that used to writing posts like that. Instead of posting an advertisement of promotion of the article about the students buy and sell textbooks, I instead decided to make posts as I student discovering and reacting to the idea. I thought that I would have a better perspective from this angle and make better posts therefore. 
 
 \end{document}
