--- a/WRIT221/Abstract Translation/Abstract Translation.tex
+++ b/WRIT221/Abstract Translation/Abstract Translation.tex
@@ -6,6 +6,8 @@
 \usepackage{graphicx}
 \author{Brock Ellefson}
 \title{WRIT221 Abstract Translation}
+\usepackage{setspace}
+\doublespacing
 \begin{document}
 
 \maketitle
@@ -40,6 +42,6 @@ Textbook prices are beginning to get out of hand. Many college students can't ev
 
 \section*{Analysis}
 %Analyize the process of making this posts 
-I tried my best to really format the information into a post I would expect to see on sites like Facebook and Twitter. The block of text that was presented for the edit was a fairly simple piece. Pretty easy to understand the material presented, however I found the transition to a Facebook post and Tweet rather awkward. I guess since I don't have a Facebook or a Twitter account anymore I'm not really that used to writing posts like that. Instead of posting an advertisement of promotion of the article about the students buy and sell textbooks, I instead decided to make posts as I student discovering and reacting to the idea. I thought that I would have a better perspective from this angle and make better posts therefore. 
+I tried my best to really format the information into a post I would expect to see on sites like Facebook and Twitter. The block of text that was presented for the edit was a fairly simple piece. Pretty easy to understand the material presented, however I found the transition to a Facebook post and Tweet rather awkward. I guess since I don't have a Facebook or a Twitter account anymore I'm not really that used to writing posts like that. Instead of posting an advertisement of promotion of the article about the students buy and sell textbooks, I instead decided to make posts as I student discovering and reacting to the idea. I thought that I would have a better perspective from this angle and therefore making better and more believable posts. I didn't included any images or anything of that nature, I didn't feel like any average joe posting about this would include any images or anything. Again, the summary of the material wasn't too difficult to understand. The way I summarized it in what I believed to be how a college student, such as myself, would talk about it. I wouldn't be too interested in the reports of better grades and gpa, but instead would be drawn to the cheap available textbooks. On the website copy I went on the more technical and professional route. Talking about the studies that show a boost in class grade averages and such, because in my eyes, that would be the more import thing to discuss on a blog or journalism website. Basically, I wanted to structure each of my abstractions to the majority of the audience that would read it. Facebook and Twitter are pretty informal, and posts on there would be casual, whereas people reading an article over the material are looking for something a lot more formal and professional.  
 
 \end{document}
