--- a/CS338/HW4/CS338HW4.tex
+++ b/CS338/HW4/CS338HW4.tex
@@ -37,12 +37,18 @@ i & {\ul } & f(i) &   \\ \hline
 
 \section*{Question 2}
 Let T = $\lbrace$(i,j,k)$\mid$ i,j,k $\epsilon$ N $\rbrace$. Show that T is countable.\\
-
+By definition, the set T is countable iff:\\
+If there exists an injective function f from T to the natural numbers\\
+If f is surjective\\
+If T has a one-to-one correspondence with natural numbers\\
+\\
+ 
 \section*{Question 3}
 Show that INFINITE$_{PDA}$ is decidable\\
 To decide INFINITE$_{PDA}$ convert PDA into equivalent CFG, let P be the pumping length. Construct regular language R that accepts strings longer than P. Intersect of CFL and regular languages is a CFL. Test this intersection for emptiness, accept if L of the intersection is empty, reject otherwise.
 \section*{Question 4}
-
+ODD$_{TM}$ = $\lbrace$ $<$M$>$ $\mid$ M is a TM and L(M) contains only strings of odd length $\rbrace$
+Prove that ODD$_{TM}$ is undecidable.
 \section*{Question 5}
 Show that EQ$_{CFG}$ is undecidable.\\
 Assume that EQ$_{CFG}$ is decideable\\
