--- a/CS338/HW4/CS338HW4.tex
+++ b/CS338/HW4/CS338HW4.tex
@@ -68,6 +68,7 @@ if R rejects, reject\\
 O(T) us a decuder for ODD$_{TM}$. Now build a decider for A$_{TM}$. This is impossible, therefore ODD$_{TM}$ is undecideable
 \section*{Question 5}
 Show that EQ$_{CFG}$ is undecidable.\\
+(This can also be proven via rice's theorem)
 Assume that EQ$_{CFG}$ is decideable\\
 EQ$_{CFG}$ = $\lbrace$ $<$G,H$>$ $\mid$ G,H are CFG's and L(G) = L(H) $\rbrace$
 \\
@@ -96,6 +97,7 @@ Post Correspondence Problem.\\
 		\includegraphics[scale = .5]{338q7.png}
   		\label{fig:PCP}
 	\end{figure}
+\\
 A working string is:\\
 11132124234244\\
 ababababababbaababaaabaaa
